--- a/src/apilib/Makefile.in
+++ b/src/apilib/Makefile.in
@@ -75,7 +75,7 @@ OBJECTS=gbatch_ciadd.o\
 LIBOBJECTS=$(OBJECTS:.o=.lo)
 
 all:	gbatch.h $(OBJECTS)
-	libtool --mode=link @CC@ $(CCFLAGS) -o $(APILIB) $(LIBOBJECTS) -rpath $(LIBDIR) -version-info 1:2:0 -release 1
+	libtool --mode=link @CC@ $(CCFLAGS) -o $(APILIB) $(LIBOBJECTS) -rpath $(LIBDIR) -version-info 0:0:0
 
 # Build header out of the bits
 
