--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: gnubatch
 Section: net
 Priority: optional
-Maintainer: John M Collins <jmc@xisl.com>
+Maintainer: John M Collins (Xi Software Ltd) <jmc@xisl.com>
 Build-Depends: debhelper (>= 7.0.50~), autotools-dev, libtool, libgtk2.0-dev, libncurses-dev, flex, bison
 Standards-Version: 3.8.4
 Homepage: http://www.gnu.org/software/gnubatch
