Adjust Makefile to fix missing symbol.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -164,7 +164,7 @@ btexec:		$(BTEXECOBJS) $(SHLIB)
 		$(CC) -o $@ $(LDFLAGS) $(BTEXECOBJS) $(LIB)
 
 btpwchk:	$(BTPWCHKOBJS) $(SHLIB)
-		$(CC) -o $@ $(LDFLAGS) $(BTPWCHKOBJS) $(LIB) $(LIBNET) @LIBSHAD@ @CRYPTLIB@ $(LIBS)
+		$(CC) -o $@ $(LDFLAGS) $(BTPWCHKOBJS) $(LIB) $(LIBCLIENT) $(LIBNET) @LIBSHAD@ @CRYPTLIB@ $(LIBS)
 
 btmdisp:	$(BTMDISPOBJS) $(SHLIB)
 		$(CC) -o $@ $(LDFLAGS) $(BTMDISPOBJS) $(LIB) $(LIBCLIENT) $(LIBNET) $(LIBS)
