Remove non-network code / relocate "home directory" config files. Change saving of format codes to string in config files.

--- a/src/hdrs/infiles.h.in
+++ b/src/hdrs/infiles.h.in
@@ -27,10 +27,13 @@
 #define MASTER_CONFIG   "@sysconfdir@/gnubatch.conf"
 #define ENV_SELECT_VAR  "GNUBATCH_ENV"
 #define USER_CONFIG     ".gnubatch"
+#define HOME_CONFIG_DIR ".gbch"
+#define HOME_CONFIG_FILE "gnubatch@MAJOR_PACKAGE_VERSION@"
+#define HOME_CONFIG     "~/" HOME_CONFIG_DIR "/" HOME_CONFIG_FILE
 #define ENVIR_FILE      "${GNUBATCHENV-@sysconfdir@/gnubatch-env}"
 #define HOSTFILE        "${HOSTFILE-@sysconfdir@/gnubatch.hosts}"
-#define CONFIGPATH      "${GB_CONFIGPATH-~:!:.:-}"
-#define HELPPATH        "${GB_HELPPATH-.:!:~}"
+#define CONFIGPATH      "${GB_CONFIGPATH-@:~:!:.:-}"
+#define HELPPATH        "${GB_HELPPATH-.:!:~:@}"
 #define VFILE           "btsched_vfile"
 #define JFILE           "btsched_jfile"
 #define JMMAP_FILE      "btmm_jobs"
