--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -27,6 +27,7 @@ CCFLAGS		=	-O @gcc_useful_options@ @funny_compiler_options@
 SHLIBCC		=	libtool --mode=link $(CC) $(CCFLAGS)
 LIBS		=	@LIBS@
 LIBCURSES	=	@LIBCURSES@
+XMLLIB          =       @xmllib@
 LIBDIR		=	@libdir@
 LIBNET		=	@SOCKLIBS@
 MV		=	mv
@@ -52,12 +53,12 @@ BINDIR		=	$(DESTDIR)@bindir@
 INTBINDIR	=	$(DESTDIR)@pkgexecdir@
 SPHELPDIR	=	$(DESTDIR)@sphelpdir@
 USERBINS	=	gbch-charge gbch-cichange gbch-cilist gbch-hols gbch-jchange \
-			gbch-jdel gbch-jlist gbch-jstat gbch-q gbch-quit gbch-r \
+			gbch-jdel gbch-jlist gbch-jstat gbch-q gbch-quit gbch-r gbch-s \
 			gbch-rr gbch-start gbch-uchange gbch-ulist gbch-user gbch-var \
 			gbch-vlist
 NOSETUBINS	=	gbch-filemon
 SUIDROOTBINS	=	btsched btexec btpwchk btmdisp xbnetserv
-SUIDBTBINS	=	jobdump
+SUIDBTBINS	=	jobdump xmljobdump
 TTYGRPBINS	=	btwrite dosbtwrite
 
 PROGS		=	$(USERBINS) $(NOSETUBINS) $(SUIDROOTBINS) $(SUIDBTBINS) $(TTYGRPBINS) insd gtkd loccgid @netsubdirs@
@@ -76,6 +77,7 @@ BTJSTATOBJS	=	btjstat.o
 BTQOBJS		=	btq.o bq_jlist.o bq_jobops.o bq_viewj.o bq_jci.o bq_paredit.o bq_vlist.o bq_varops.o bq_miscscr.o wtimes.o bq_propts.o bq_hols.o
 BTQUITOBJS	=	btquit.o
 BTROBJS		=	btr.o
+BTSOBJS         =       bts.o
 RBTROBJS	=	rbtr.o rbt_access.o rbt_job.o
 BTSTARTOBJS	=	btstart.o
 BTUCHANGEOBJS	=	btuchange.o
@@ -91,6 +93,7 @@ BTMDISPOBJS	=	btmdisp.o
 XBNETSERVOBJS	=	xbnetserv.o xbnet_ua.o xbnet_api.o
 
 JOBDUMPOBJS	=	jobdump.o
+XMLJOBDUMPOBJS  =       xmljobdump.o
 BTWRITEOBJS	=	btwrite.o
 DOSBTWRITEOBJS	=	dosbtwrite.o
 
@@ -130,6 +133,9 @@ gbch-quit:		$(BTQUITOBJS) $(SHLIB)
 
 gbch-r:		$(BTROBJS) $(SHLIB)
 		$(SHLIBCC) -o $@ $(LDFLAGS) $(BTROBJS) $(SHLIB) $(SHLIBCLIENT) $(LIBNET) $(LIBS)
+
+gbch-s:		$(BTSOBJS) $(SHLIB)
+		$(SHLIBCC) -o $@ $(LDFLAGS) $(BTSOBJS) $(SHLIB) $(SHLIBCLIENT) $(LIBNET) $(LIBS) $(XMLLIB)
 
 gbch-rr:	$(RBTROBJS) $(SHLIB)
 		$(SHLIBCC) -o $@ $(LDFLAGS) $(RBTROBJS) $(SHLIB) $(SHLIBCLIENT) $(LIBNET) $(LIBS)
@@ -174,6 +180,9 @@ xbnetserv:	$(XBNETSERVOBJS) $(SHLIB)
 
 jobdump:	$(JOBDUMPOBJS) $(SHLIB)
 		$(SHLIBCC) -o $@ $(LDFLAGS) $(JOBDUMPOBJS) $(SHLIB) $(SHLIBCLIENT) $(LIBNET) $(LIBS)
+
+xmljobdump:	$(XMLJOBDUMPOBJS) $(SHLIB)
+		$(SHLIBCC) -o $@ $(LDFLAGS) $(XMLJOBDUMPOBJS) $(SHLIB) $(SHLIBCLIENT) $(LIBNET) $(LIBS) $(XMLLIB)
 
 btwrite:	$(BTWRITEOBJS) $(SHLIB)
 		$(SHLIBCC) -o $@ $(LDFLAGS) $(BTWRITEOBJS) $(SHLIB) $(LIBNET) $(LIBS)
